--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 6.13 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 6.15 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="../../_static/basic.css?v=686e5160" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css?v=ed0133b2" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css?v=7f9a90b1" />
-    <script src="../../_static/documentation_options.js?v=f5789178"></script>
+    <script src="../../_static/documentation_options.js?v=9a8985ac"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -1001,7 +1001,11 @@
                 <span class="n">_stat_site_max</span><span class="o">=</span><span class="s2">&quot;max(_stat_not_hidden)&quot;</span><span class="p">,</span>
                 <span class="n">groupby</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">],</span>
             <span class="p">)</span>
-        <span class="k">if</span> <span class="n">slider_stat</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">addtl_slider_stats_hide_not_filter</span><span class="p">:</span>
+            <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_filter</span><span class="p">(</span>
+                <span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span> <span class="o">&gt;=</span> <span class="p">(</span><span class="n">slider</span> <span class="o">-</span> <span class="mf">1e-6</span><span class="p">))</span>  <span class="c1"># round tol</span>
+                <span class="o">|</span> <span class="o">~</span><span class="n">alt</span><span class="o">.</span><span class="n">expr</span><span class="o">.</span><span class="n">isFinite</span><span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">])</span>  <span class="c1"># do not filter null</span>
+            <span class="p">)</span>
+        <span class="k">elif</span> <span class="n">slider_stat</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">addtl_slider_stats_hide_not_filter</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">slider_stat</span> <span class="ow">in</span> <span class="n">addtl_slider_stats_as_max</span><span class="p">:</span>
                 <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_filter</span><span class="p">(</span>
                     <span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span> <span class="o">&lt;=</span> <span class="p">(</span><span class="n">slider</span> <span class="o">+</span> <span class="mf">1e-6</span><span class="p">))</span>  <span class="c1"># round tol</span>
@@ -1354,7 +1358,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer">
-      &#169;2019--2024.
+      &#169;2019--2025.
       
       |
       Powered by <a href="https://www.sphinx-doc.org/">Sphinx 8.1.3</a>
