--- a/_modules/polyclonal/polyclonal.html
+++ b/_modules/polyclonal/polyclonal.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.polyclonal &#8212; polyclonal 6.13 documentation</title>
+    <title>polyclonal.polyclonal &#8212; polyclonal 6.15 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="../../_static/basic.css?v=686e5160" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css?v=ed0133b2" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css?v=7f9a90b1" />
-    <script src="../../_static/documentation_options.js?v=f5789178"></script>
+    <script src="../../_static/documentation_options.js?v=9a8985ac"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -227,8 +227,7 @@
 <span class="sd">        from ``data_to_fit`` or ``mut_escape_df``. However, you can also have</span>
 <span class="sd">        non-sequential integer sites, or sites with lower-case letter suffixes</span>
 <span class="sd">        (eg, `214a`) if your protein is numbered against a reference that it has</span>
-<span class="sd">        indels relative to. In that case, provide list of all expected in order</span>
-<span class="sd">        here; we require that order to be natsorted.</span>
+<span class="sd">        indels relative to. In that case, provide list of all expected in order here.</span>
 <span class="sd">    epitope_colors : array-like or dict</span>
 <span class="sd">        Maps each epitope to the color used for plotting. Either a dict keyed</span>
 <span class="sd">        by each epitope, or an array of colors that are sequentially assigned</span>
@@ -847,8 +846,6 @@
 
         <span class="k">if</span> <span class="n">sites</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
             <span class="n">sites</span> <span class="o">=</span> <span class="nb">tuple</span><span class="p">(</span><span class="n">sites</span><span class="p">)</span>
-            <span class="k">if</span> <span class="n">sites</span> <span class="o">!=</span> <span class="nb">tuple</span><span class="p">(</span><span class="n">natsort</span><span class="o">.</span><span class="n">natsorted</span><span class="p">(</span><span class="n">sites</span><span class="p">,</span> <span class="n">alg</span><span class="o">=</span><span class="n">natsort</span><span class="o">.</span><span class="n">ns</span><span class="o">.</span><span class="n">SIGNED</span><span class="p">)):</span>
-                <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;`sites` not natsorted&quot;</span><span class="p">)</span>
             <span class="k">if</span> <span class="nb">any</span><span class="p">(</span><span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">r</span><span class="p">,</span> <span class="nb">int</span><span class="p">)</span> <span class="k">for</span> <span class="n">r</span> <span class="ow">in</span> <span class="n">sites</span><span class="p">)</span> <span class="ow">or</span> <span class="n">sites</span> <span class="o">!=</span> <span class="nb">tuple</span><span class="p">(</span>
                 <span class="nb">range</span><span class="p">(</span><span class="n">sites</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">sites</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="o">+</span> <span class="mi">1</span><span class="p">)</span>
             <span class="p">):</span>
@@ -866,7 +863,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">alphabet</span> <span class="o">=</span> <span class="nb">tuple</span><span class="p">(</span><span class="n">alphabet</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_mutparser</span> <span class="o">=</span> <span class="n">polyclonal</span><span class="o">.</span><span class="n">utils</span><span class="o">.</span><span class="n">MutationParser</span><span class="p">(</span>
             <span class="n">alphabet</span><span class="p">,</span>
-            <span class="n">letter_suffixed_sites</span><span class="o">=</span><span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">sequential_integer_sites</span><span class="p">,</span>
+            <span class="n">arbitrary_sites</span><span class="o">=</span><span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">sequential_integer_sites</span><span class="p">,</span>
         <span class="p">)</span>
 
         <span class="c1"># get any epitope labels as str, not int</span>
@@ -1651,13 +1648,13 @@
             <span class="n">site_data_to_fit</span> <span class="o">=</span> <span class="n">polyclonal</span><span class="o">.</span><span class="n">utils</span><span class="o">.</span><span class="n">site_level_variants</span><span class="p">(</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">data_to_fit</span><span class="p">,</span>
                 <span class="n">original_alphabet</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">alphabet</span><span class="p">,</span>
-                <span class="n">letter_suffixed_sites</span><span class="o">=</span><span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">sequential_integer_sites</span><span class="p">,</span>
+                <span class="n">arbitrary_sites</span><span class="o">=</span><span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">sequential_integer_sites</span><span class="p">,</span>
             <span class="p">)</span>
         <span class="n">site_escape_df</span> <span class="o">=</span> <span class="p">(</span>
             <span class="n">polyclonal</span><span class="o">.</span><span class="n">utils</span><span class="o">.</span><span class="n">site_level_variants</span><span class="p">(</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">mut_escape_df</span><span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">{</span><span class="s2">&quot;mutation&quot;</span><span class="p">:</span> <span class="s2">&quot;aa_substitutions&quot;</span><span class="p">}),</span>
                 <span class="n">original_alphabet</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">alphabet</span><span class="p">,</span>
-                <span class="n">letter_suffixed_sites</span><span class="o">=</span><span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">sequential_integer_sites</span><span class="p">,</span>
+                <span class="n">arbitrary_sites</span><span class="o">=</span><span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">sequential_integer_sites</span><span class="p">,</span>
             <span class="p">)</span>
             <span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">{</span><span class="s2">&quot;aa_substitutions&quot;</span><span class="p">:</span> <span class="s2">&quot;mutation&quot;</span><span class="p">})</span>
             <span class="o">.</span><span class="n">groupby</span><span class="p">([</span><span class="s2">&quot;epitope&quot;</span><span class="p">,</span> <span class="s2">&quot;mutation&quot;</span><span class="p">],</span> <span class="n">as_index</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
@@ -3489,7 +3486,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer">
-      &#169;2019--2024.
+      &#169;2019--2025.
       
       |
       Powered by <a href="https://www.sphinx-doc.org/">Sphinx 8.1.3</a>
