--- a/polyclonal.polyclonal.html
+++ b/polyclonal.polyclonal.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>polyclonal &#8212; polyclonal 6.13 documentation</title>
+    <title>polyclonal &#8212; polyclonal 6.15 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="_static/basic.css?v=686e5160" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=ed0133b2" />
     <link rel="stylesheet" type="text/css" href="_static/plot_directive.css?v=7f9a90b1" />
-    <script src="_static/documentation_options.js?v=f5789178"></script>
+    <script src="_static/documentation_options.js?v=9a8985ac"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -145,8 +145,7 @@ but <em>not</em> a good idea if you are doing bootstrapping.</p></li>
 from <code class="docutils literal notranslate"><span class="pre">data_to_fit</span></code> or <code class="docutils literal notranslate"><span class="pre">mut_escape_df</span></code>. However, you can also have
 non-sequential integer sites, or sites with lower-case letter suffixes
 (eg, <cite>214a</cite>) if your protein is numbered against a reference that it has
-indels relative to. In that case, provide list of all expected in order
-here; we require that order to be natsorted.</p></li>
+indels relative to. In that case, provide list of all expected in order here.</p></li>
 <li><p><strong>epitope_colors</strong> (<em>array-like</em><em> or </em><em>dict</em>) – Maps each epitope to the color used for plotting. Either a dict keyed
 by each epitope, or an array of colors that are sequentially assigned
 to the epitopes.</p></li>
@@ -1408,7 +1407,7 @@ ones in <code class="docutils literal notranslate"><span class="pre">mut_escape_
       <div class="clearer"></div>
     </div>
     <div class="footer">
-      &#169;2019--2024.
+      &#169;2019--2025.
       
       |
       Powered by <a href="https://www.sphinx-doc.org/">Sphinx 8.1.3</a>
